--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "ipfs": "^0.39.0",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
