--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "Dan Shields <danwshields@gmail.com>",
   "private": true,
   "scripts": {
+    "dev": "quasar dev",
+    "build": "quasar build",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
