--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@skavinvarnan/cryptlib": "^1.0.3",
     "exif-js": "^2.3.0",
     "ipfs": "^0.39.0",
     "quasar": "^1.0.0"
