--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "scripts": {
     "dev": "quasar dev",
     "build": "quasar build",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "deploy": "push-dir --dir=dist/spa --remote=gh-pages --branch=master"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "@skavinvarnan/cryptlib": "^1.0.3",
     "exif-js": "^2.3.0",
     "ipfs": "^0.39.0",
+    "push-dir": "^0.4.1",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
